--- a/assets/css/style2.css
+++ b/assets/css/style2.css
@@ -1,23 +1,78 @@
+body {
+    background-color: black;
+    width: 1410px;
 
-.parallax-container {
-    background-image: url("../images/silouette.png");
-    height: 500px;
-    background-attachment: fixed;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
 }
 
-.some-content {
+header {
+    background-color: black;
+
+}
+
+header ul {
+        list-style-type: none;
+        margin: 0;
+        padding: 25px 0 0 0;
+        font-size: 20px;
+}
+
+header ul li {
+    text-decoration: none;
+    display: inline;
+    margin: 0 30px;
+    
+}
+
+header ul li a {
+    color: #b52332;
+}
+
+header ul li a:hover {
+    text-decoration: none;
+    color: black;
+}
+
+#hero-wrapper {
+    padding: 0;
+    background-color: #f5e60a;
+    height: 400px;
+    width: 100%;
+
+}
+
+#quote {
+    position: absolute;
+    background-image: url("../images/something.png");
+    background-repeat:no-repeat;
+    left: 50px;
+    top: 40px;
+    width: 390px;
     height: 200px;
-}
-
-.another-parallax {
-    background-image: url("../images/9596014.png");
-    height: 300px;
-    background-attachment: fixed;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
+    color: black;
+    padding: 30px 0 0 20px;
+    font-family: 'Black Ops One', cursive;
 
 }
+
+#logo-wrapper {
+    padding: 0;
+
+}
+
+#logo {
+    float: left;
+
+}
+
+#silouette {
+    position: absolute;
+    left: 0px;
+
+}
+
+#content-wrapper {
+    padding: 0;
+    color: white;
+
+}
+
