--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,6 +9,20 @@ p {
 
 }
 
+.iframe-map {
+    position: relative;
+    height: 0;
+    overflow: hidden;
+}
+
+.iframe-map iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 97%;
+}
+
 
 #nav-area {
     background-color: black;
@@ -130,5 +144,16 @@ p {
     text-align: center;
 }
 
+#google-map-embed {
+    margin-top: 10px;
+    height: 400px;
+
+}
+
+#calendar-embed {
+    margin-top: 10px;
+    height: 400px;
+
+}
 
 
