added the photos page for now

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -127,6 +127,7 @@ h3 , p {
     height: 97%;
 }
 
+
 /*
 
 ===== ID's =====
@@ -136,6 +137,7 @@ h3 , p {
 #quote {
   position: relative;
   font-family: "Black Ops One", cursive;
+  display: none;
 }
 
 #welcome {
@@ -170,15 +172,57 @@ h3 , p {
 
 #google-map-embed {
     margin-top: 10px;
-    height: 400px;
+    height: 80vh;
 
 }
 
 #calendar-embed {
     margin-top: 10px;
-    height: 400px;
+    height: 80vh;
 
 }
+
+#photos-section {
+  background-color: black;
+  border-top: solid 20px #f5e60b;
+  border-bottom: solid 20px #f5e60b;
+  padding-top: 0;
+}
+
+.facebookImgThumb i {
+  border: 2px solid #b0b0b0;
+  padding: 0;
+  margin: 0;
+  vertical-align: middle;
+  width: 149px;
+  height: 116px;
+  display: inline-block;
+  background-position: center 25%;
+  background-repeat: no-repeat;
+  }
+  .facebookImgThumb p {
+  vertical-align: bottom;
+  font-size: 0.85em;
+  }
+  .facebookImgThumb {
+  margin: 5px;
+  display: inline-block;
+  width: 151px;
+  }
+  .facebookImgThumb:hover {
+  cursor: pointer;
+  }
+  .loader{
+  display:none;
+  /*set the div in the bottom right corner*/
+  position:fixed;
+  bottom:8px;
+  right:8px;
+  width:31px;
+  height:31px;
+  /*give it some background and border*/
+  background:url(https://dl.dropbox.com/u/1017142/ajax-loader.gif) no-repeat;
+  }
 
 /*
 
