few minor changes for readability

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,6 +10,7 @@ body {
 
 h3 , p {
   font-family: "Nanum Gothic", sans-serif;
+  
 }
 
 /*
@@ -72,13 +73,13 @@ h3 , p {
 
 .nav-section > ul > li > a {
   text-decoration: none;
-  color: #b52332;
+  color: #f5e60b;
   font-family: "Nanum Gothic", sans-serif;
 }
 
 .nav-section > ul > li > a:hover {
   text-decoration: none;
-  color: #f5e60b;
+  color: white;
 }
 
 .hero-section {
@@ -153,6 +154,7 @@ h3 , p {
 }
 
 
+
 /*
 
 ===== ID's =====
@@ -177,7 +179,12 @@ h3 , p {
 
 #muay-thai {
     background-color: #b52332;
+    color: white;
 
+}
+
+#muay-thai > .home-content >.section-title {
+  border-bottom: solid 2px white;
 }
 
 #grappling {
@@ -192,7 +199,12 @@ h3 , p {
 
 #children {
     background-color: #b52332;
+    color: white;
 
+}
+
+#children > .home-content >.section-title {
+  border-bottom: solid 2px white;
 }
 
 #google-map-embed {
@@ -303,6 +315,10 @@ h3 , p {
   .section-title {
     font-size: 20px;
   }
+
+  .coach-image {
+    margin-left: 50px;
+  }
 }
 
 
@@ -348,6 +364,11 @@ h3 , p {
     margin-left: 20px;
 }
 
+.section-title {
+  font-size: 35px;
+  line-height: 50px;
+  margin-bottom: 10px;
+}
 
   #quote {
     top: 15%;
@@ -364,6 +385,11 @@ h3 , p {
 */
 
 @media (min-width: 900px) and (max-width: 1199px) {
+
+  p {
+    font-size: 18px;
+  }
+
   .social-1,
   .social-2 {
     padding: 30px 10px;
@@ -397,6 +423,12 @@ h3 , p {
     margin-left: 20px;
 }
 
+.section-title {
+  font-size: 35px;
+  line-height: 50px;
+  margin-bottom: 20px;
+}
+
   #quote {
     top: 18%;
     left: 13%;
@@ -412,6 +444,10 @@ h3 , p {
 */
 
 @media (min-width: 1200px) {
+  p {
+    font-size: 22px;
+  }
+
   .social-1,
   .social-2 {
     padding: 30px 10px;
@@ -449,10 +485,16 @@ h3 , p {
     margin-left: 20px;
 }
 
+.section-title {
+  font-size: 40px;
+  line-height: 60px;
+  margin-bottom: 20px;
+}
+
   #quote {
     top: 18%;
     left: 13%;
     width: 500px;
-    font-size: 40px;
+    font-size: 42px;
   }
 }
