--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,9 +8,9 @@ body {
   margin: 0;
 }
 
-h3 , p {
+h3,
+p {
   font-family: "Nanum Gothic", sans-serif;
-  
 }
 
 /*
@@ -24,7 +24,7 @@ h3 , p {
   grid-template-rows: 1fr;
 }
 
-.wrapper-page > div {
+.wrapper-page>div {
   box-sizing: border-box;
 }
 
@@ -57,28 +57,28 @@ h3 , p {
   text-align: center;
 }
 
-.nav-section > ul {
+.nav-section>ul {
   list-style-type: none;
   padding: 0;
 }
 
-.nav-section > ul > li {
+.nav-section>ul>li {
   border-right: solid white 2px;
   display: inline;
 }
 
-.nav-section > ul > li:last-child {
+.nav-section>ul>li:last-child {
   border: none;
 }
 
-.nav-section > ul > li > a {
+.nav-section>ul>li>a {
   text-decoration: none;
   font-weight: 900;
   color: #b52332;
   font-family: "Nanum Gothic", sans-serif;
 }
 
-.nav-section > ul > li > a:hover {
+.nav-section>ul>li>a:hover {
   text-decoration: none;
   color: white;
 }
@@ -90,12 +90,12 @@ h3 , p {
 }
 
 .separator {
-    background-image: url("../images/group-2.jpeg");
-    position: relative;
-    background-attachment: fixed;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
+  background-image: url("../images/group-2.jpg");
+  position: relative;
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 .section {
@@ -119,71 +119,64 @@ h3 , p {
 }
 
 .footer-section {
-    clear: both;
-    background-color: #222;
-    color: #999;
-    
-    font-family: "Nanum Gothic", sans-serif;
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-gap: 10px;
-    padding: 25px 200px;
-
+  clear: both;
+  background-color: #222;
+  color: #999;
+  font-family: "Nanum Gothic", sans-serif;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-gap: 10px;
+  padding: 25px 200px;
 }
 
-.footer-section > div {
+.footer-section>div {
   height: 200px;
   text-align: left;
   color: #bbb;
   line-height: 30px;
-
-
 }
 
 .iframe-map {
-    position: relative;
-    height: 0;
-    overflow: hidden;
+  position: relative;
+  height: 0;
+  overflow: hidden;
 }
 
 .iframe-map iframe {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 97%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 97%;
 }
-
 
 .coach-description {
   margin-left: 40px;
 }
 
-.coach-description > h3 {
+.coach-description>h3 {
   font-size: 30px;
   border-bottom: solid 1px black;
 }
 
-.coach-description > p {
+.coach-description>p {
   font-size: 18px;
 }
 
-.coach-image > img{
+.coach-image>img {
   max-width: 300px;
   max-height: 500px;
   border: solid 5px black;
 }
 
-.header-section > div > a {
+.header-section>div>a {
   text-decoration: none;
   color: grey;
 }
 
-.home-image > img {
+.home-image>img {
   border: solid #222 5px;
 }
-
-
 
 /*
 
@@ -198,50 +191,43 @@ h3 , p {
 }
 
 #welcome {
-    background-color: black;
-    color: #ccc;
-
+  background-color: black;
+  color: #ccc;
 }
 
 #muay-thai {
-    background-color: #f5e60b;
-    color: black;
-
+  background-color: #f5e60b;
+  color: black;
 }
 
-#sparring > .home-content >.section-title,
-#grappling > .home-content >.section-title,
-#children > .home-content >.section-title,
-#welcome-header   {
+#sparring>.home-content>.section-title,
+#grappling>.home-content>.section-title,
+#children>.home-content>.section-title,
+#welcome-header {
   border-bottom: solid 1px #ccc;
 }
 
 #grappling {
-    background-color: black;
-    color: #ccc;
-
+  background-color: black;
+  color: #ccc;
 }
 
 #sparring {
-    background-color: #b52332;
-    color: #ccc;
-
+  background-color: #b52332;
+  color: #ccc;
 }
 
 #children {
-    background-color: #b52332;
-    color: #ccc;
-
+  background-color: #b52332;
+  color: #ccc;
 }
 
 #google-map-embed {
-    height: 80vh;
-
+  height: 80vh;
 }
 
 #calendar-embed {
-    height: 80vh;
-
+  height: 80vh;
 }
 
 #photos-section {
@@ -249,7 +235,6 @@ h3 , p {
   border-top: solid 20px #f5e60b;
   border-bottom: solid 20px #f5e60b;
   padding-top: 0;
-
 }
 
 #coach-jim {
@@ -257,7 +242,7 @@ h3 , p {
 }
 
 #coach-linda {
-  background-color:  #f5e60b;
+  background-color: #f5e60b;
 }
 
 #jim-section {
@@ -284,98 +269,112 @@ h3 , p {
   p {
     font-size: 12px;
   }
-
-  .logo > img {
+  .logo>img {
     height: 50px;
   }
-
   .header-section {
     grid-template-columns: auto;
   }
-
   .social-1,
   .social-2 {
     padding-top: 8px;
   }
-
-  .nav-section > ul > li {
+  .nav-section>ul>li {
     margin-left: 10px;
     padding-right: 5px;
   }
-
-  .nav-section > ul > li > a {
+  .nav-section>ul>li>a {
     font-size: 14px;
   }
-
   .hero-section {
     height: 200px;
     background-image: url("../images/silouette.png");
   }
-
   .separator {
     background-attachment: scroll;
-}
-
+  }
   .section {
     padding: 10px 30px;
     line-height: 25px;
   }
-
   .section-img-l {
     display: grid;
     grid-template-columns: auto;
   }
-
   .section-img-r {
     display: grid;
     grid-template-columns: auto;
   }
-
   .home-image {
     grid-row: 1 / 2;
     text-align: center;
   }
-
-  .home-image > img {
+  .home-image>img {
     max-width: 300px;
     max-height: 300px;
   }
-
   .home-content {
     grid-row: 2 / 3;
   }
-
   #quote {
     top: 20px;
     left: 50px;
     width: 120px;
   }
-
   .section-title {
     font-size: 20px;
   }
-
   .coach-image {
     margin-left: 50px;
   }
-}
+  .footer-logo {
+    grid-column: 1 / 3;
+  }
+  .footer-logo>img {
+    height: 50px;
+  }
+  .footer-info {
+    grid-column: 1 / 3;
+    font-size: 12px;
+  }
+  .footer-section {
+    padding: 25px 35px;
+    height: 400px;
+  }
 
-.footer-logo {
-  grid-column: 1 / 3;
-}
+  .footer-section > div {
+    text-align: center;
+  }
+  .coach-description {
+    line-height: 25px;
+  }
+  .coach-description>p {
+    font-size: 14px;
+  }
+  .coach-description>h3 {
+    font-size: 22px;
+  }
+  #coach-jim {
+    padding-top: 50px;
+  }
+  #coach-jim>.coach-image>img {
+    max-width: 250px;
+  }
+  #coach-linda>.coach-image>img {
+    margin-left: 0px;
+  }
+  #coach-linda {
+    padding-top: 30px;
+    height: 700px;
+  }
 
-.footer-logo > img {
-  height: 75px;
-}
+  #coach-linda > .coach-description {
+    grid-row: 2 / 3;
+  }
 
-.footer-info {
-  grid-column: 1 / 3;
-  font-size: 12px;
-}
-
-.footer-section {
-  padding: 25px 35px;
-  height: 500px;
+  #coach-linda > .coach-image {
+    grid-row: 1 / 2;
+  }
 }
 
 
@@ -385,72 +384,87 @@ h3 , p {
 
 */
 
-
-
 @media (min-width: 600px) and (max-width: 899px) {
   .social-1,
   .social-2 {
     padding: 25px 10px;
     word-spacing: 20px;
   }
-
-  .nav-section > ul > li {
+  .nav-section>ul>li {
     margin-left: 4%;
     padding-right: 4%;
   }
-
   .hero-section {
     height: 275px;
   }
-
   .separator {
-      background-attachment: scroll;
-}
-
+    background-attachment: scroll;
+  }
   .section {
     padding: 25px 80px;
     line-height: 30px;
     height: 450px;
   }
-
-  .home-image > img {
+  .home-image>img {
     max-width: 300px;
     max-height: 300px;
   }
-
-  .section-img-l > .home-image > img {
-      margin-right: 40px;
+  .section-img-l>.home-image>img {
+    margin-right: 40px;
+  }
+  .section-img-r>.home-image>img {
+    margin-left: 40px;
+  }
+  .section-title {
+    font-size: 28px;
+    line-height: 50px;
+    margin-bottom: 10px;
+  }
+  .footer-section {
+    height: 500px;
+    padding: 25px 185px;
+  }
+  .footer-logo {
+    grid-column: 1 / 3;
   }
 
-  .section-img-r > .home-image > img {
-    margin-left: 40px;
-}
+  .footer-logo>img {
+    height: 75px;
+  }
+  .footer-info {
+    grid-column: 1 / 3;
+    font-size: 14px;
+  }
 
-.section-title {
-  font-size: 28px;
-  line-height: 50px;
-  margin-bottom: 10px;
-}
-
-.footer-section {
-  height: 500px;
-  padding: 25px 185px;
-}
-
-.footer-logo {
-  grid-column: 1 / 3;
-}
-
-.footer-info {
-  grid-column: 1 / 3;
-}
-
+  .coach-description {
+    line-height: 25px;
+  }
+  .coach-description>p {
+    font-size: 14px;
+  }
+  .coach-description>h3 {
+    font-size: 22px;
+  }
+  #coach-jim {
+    padding-top: 50px;
+  }
+  #coach-jim>.coach-image>img {
+    max-width: 300px;
+  }
+  #coach-linda>.coach-image>img {
+    margin-left: 70px;
+  }
+  #coach-linda {
+    padding-top: 30px;
+    height: 570px;
+  }  
   #quote {
     top: 15%;
     left: 15%;
     width: 250px;
     font-size: 20px;
   }
+
 }
 
 /*
@@ -460,78 +474,82 @@ h3 , p {
 */
 
 @media (min-width: 900px) and (max-width: 1199px) {
-
   p {
     font-size: 16px;
   }
-
   .social-1,
   .social-2 {
     padding: 30px 10px;
     word-spacing: 40px;
   }
-
-  .nav-section > ul > li {
+  .nav-section>ul>li {
     margin-left: 6%;
     padding-right: 6%;
   }
-
   .hero-section {
     height: 370px;
   }
-
   .separator {
     height: 270px;
   }
-
   .section {
     padding: 55px 75px;
     line-height: 34px;
     height: 475px;
   }
-
-  .home-image > img {
+  .home-image>img {
     max-width: 350px;
     max-height: 350px;
   }
-
   .separator {
     height: 350px;
   }
-
-  .section-img-l > .home-image > img {
-      margin-right: 50px;
+  .section-img-l>.home-image>img {
+    margin-right: 50px;
   }
-
-  .section-img-r > .home-image > img {
+  .section-img-r>.home-image>img {
     margin-left: 50px;
-}
-
-.section-title {
-  font-size: 30px;
-  line-height: 50px;
-  margin-bottom: 20px;
-}
-
-.footer-section {
-  height: 300px;
-  padding: 25px 125px;
-
-}
-
-.footer-logo {
-  grid-column: 1 / 2;
-}
-
-.footer-info {
-  grid-column: 2 / 3;
-}
-
+  }
+  .section-title {
+    font-size: 30px;
+    line-height: 50px;
+    margin-bottom: 20px;
+  }
+  .footer-section {
+    height: 300px;
+    padding: 25px 125px;
+  }
+  .footer-logo {
+    grid-column: 1 / 2;
+  }
+  .footer-info {
+    grid-column: 2 / 3;
+  }
+  .coach-description {
+    line-height: 60px;
+  }
+  .coach-description>p {
+    font-size: 18px;
+  }
   #quote {
     top: 18%;
     left: 13%;
     width: 350px;
     font-size: 30px;
+  }
+  #coach-jim {
+    padding-top: 30px;
+  }
+  #coach-jim>.coach-image>img {
+    max-width: 380px;
+    margin-right: 25px;
+  }
+  #coach-linda>.coach-image>img {
+    margin-left: 70px;
+  }
+  #coach-linda {
+    padding-top: 30px;
+    height: 570px;
   }
 }
 
@@ -545,76 +563,79 @@ h3 , p {
   p {
     font-size: 20px;
   }
-
   .social-1,
   .social-2 {
     padding: 30px 10px;
     word-spacing: 60px;
   }
-
-  .nav-section > ul > li {
+  .nav-section>ul>li {
     margin-left: 7%;
     padding-right: 7%;
   }
-
   .section p {
-      text-align: left !important;
+    text-align: left !important;
   }
-
   .hero-section {
     height: 500px;
   }
-
   .separator {
     height: 350px;
   }
-
   .section {
     padding: 75px 130px;
     line-height: 40px;
   }
-
-  .home-image > img {
+  .home-image>img {
     max-width: 400px;
     max-height: 400px;
   }
-
   .footer-section {
     text-align: center;
     height: 300px;
   }
-
-  .section-img-l > .home-image > img {
-      margin-right: 100px;
+  .section-img-l>.home-image>img {
+    margin-right: 100px;
   }
-
-  .section-img-r > .home-image > img {
+  .section-img-r>.home-image>img {
     margin-left: 100px;
-}
-
-.section-title {
-  font-size: 40px;
-  line-height: 60px;
-  margin-bottom: 20px;
-}
-
-.footer-section {
-  padding: 25px 200px;
-}
-
-.footer-logo {
-  grid-column: 1 / 2;
-}
-
-.footer-info {
-  grid-column: 2 / 3;
-}
-
+  }
+  .section-title {
+    font-size: 40px;
+    line-height: 60px;
+    margin-bottom: 20px;
+  }
+  .footer-section {
+    padding: 25px 200px;
+  }
+  .footer-logo {
+    grid-column: 1 / 2;
+  }
+  .footer-info {
+    grid-column: 2 / 3;
+  }
+  .coach-description {
+    line-height: 60px;
+  }
+  .coach-description>p {
+    font-size: 20px;
+  }
   #quote {
     top: 18%;
     left: 13%;
     width: 500px;
     font-size: 42px;
   }
-
+  #coach-jim {
+    padding-top: 40px;
+  }
+  #coach-jim>.coach-image>img {
+    max-width: 900px;
+    margin-right: 40px;
+  }
+  #coach-linda>.coach-image>img {
+    margin-left: 70px;
+  }
+  #coach-linda {
+    padding-top: 46px;
+  }
 }
