--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -169,7 +169,7 @@ p {
   border: solid 5px black;
 }
 
-.header-section>div>a {
+.icon{
   text-decoration: none;
   color: grey;
 }
@@ -339,7 +339,7 @@ p {
   }
   .footer-section {
     padding: 25px 35px;
-    height: 400px;
+    height: 500px;
   }
 
   .footer-section > div {
